fixed bugs 3